alignment fix

--- a/src/app/systems/incidents/update-incident/update-history/update-history.component.scss
+++ b/src/app/systems/incidents/update-incident/update-history/update-history.component.scss
@@ -20,7 +20,7 @@
 }
 
 .new-update mdb-card{
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .update-history .last-update-time{
